force-app/main/default/objects/Onboard_Request__c/fields/Establishment_Card_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Card_Applicable__c</fullName>
    <formula>TEXT(Account_Name__r.Is_Establishment_Card_Applicable__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Establishment Card Applicable</label>
    <type>Text</type>
</CustomField>