force-app/main/default/objects/Onboard_Request__c/fields/Establishment_Card_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Card_Expiry_Date__c</fullName>
    <formula>IF(ISBLANK(Old_Establishment_Card_Expiry_Date__c),Account_Name__r.Current_Establishment_Card__r.Expiry_Date__c,Old_Establishment_Card_Expiry_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Establishment Card Expiry Date</label>
    <type>Date</type>
</CustomField>