force-app/main/default/objects/Onboard_Request__c/fields/Establishment_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Card_Number__c</fullName>
    <formula>Account_Name__r.Current_Establishment_Card__r.Establishment_Card_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Establishment Card Number</label>
    <type>Text</type>
</CustomField>