force-app/main/default/objects/Onboard_Request__c/fields/Establishment_Card_Request__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Card_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Establishment Card Request</label>
    <referenceTo>Onboard_Request__c</referenceTo>
    <relationshipName>Establishment_Card_Request</relationshipName>
    <type>Lookup</type>
</CustomField>