force-app/main/default/objects/Onboard_Request__c/fields/Establishment_Card_Required__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Card_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Establishment Card Required?</label>
    <type>Checkbox</type>
</CustomField>