force-app/main/default/objects/Onboard_Request__c/fields/Establishment_Category__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Category__c</fullName>
    <formula>IF( Establishment_Card_Required__c , IF(Urgent_Processing_EC__c,IMAGE(&apos;https://dubaisouth.file.force.com/servlet/servlet.ImageServer?id=0153z000007sDkB&amp;oid=00D200000005fhi&amp;lastMod=1710359413000&apos;, &apos;URGENT&apos;, 30, 90),IMAGE(&apos;https://dubaisouth.file.force.com/servlet/servlet.ImageServer?id=0153z000007sDjw&amp;oid=00D200000005fhi&amp;lastMod=1710358879000&apos;,&apos;NORMAL&apos;,30,90)
), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Category EC</label>
    <type>Text</type>
</CustomField>