force-app/main/default/objects/Onboard_Request__c/fields/Exception_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Company_Type__c</fullName>
    <label>Exception_Company_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>