force-app/main/default/objects/Onboard_Request__c/fields/Executive_Summary__c.field-meta.xml
<CustomField>
    <fullName>Executive_Summary__c</fullName>
    <label>Executive Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>