force-app/main/default/objects/Onboard_Request__c/fields/External_Activity_Applicable__c.field-meta.xml
<CustomField>
    <fullName>External_Activity_Applicable__c</fullName>
    <label>External Activity Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>