force-app/main/default/objects/Onboard_Request__c/fields/External_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>External_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Approval Required?</label>
    <type>Checkbox</type>
</CustomField>