force-app/main/default/objects/Onboard_Request__c/fields/Final_Review_Step_Id__c.field-meta.xml
<CustomField>
    <fullName>Final_Review_Step_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Review Step Id</label>
    <referenceTo>acbox__Action_Page_Flow__c</referenceTo>
    <relationshipName>Onboarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>