force-app/main/default/objects/Onboard_Request__c/fields/Finalized__c.field-meta.xml
<CustomField>
    <fullName>Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record Review and confirm by portal user , stop deleting attached document and prices</description>
    <label>Finalized</label>
    <type>Checkbox</type>
</CustomField>