force-app/main/default/objects/Onboard_Request__c/fields/Financial_Day_And_Month__c.field-meta.xml
<CustomField>
    <fullName>Financial_Day_And_Month__c</fullName>
    <formula>TEXT(DAY(Account_Name__r.What_is_your_financial_year__c)) &amp; &quot; &quot; &amp;
CASE(MONTH(Account_Name__r.What_is_your_financial_year__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;&quot;)</formula>
    <label>Financial Day And Month</label>
    <type>Text</type>
</CustomField>