force-app/main/default/objects/Onboard_Request__c/fields/Financial_Period__c.field-meta.xml
<CustomField>
    <fullName>Financial_Period__c</fullName>
    <label>Financial Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>