force-app/main/default/objects/Onboard_Request__c/fields/Floor_Shop_No__c.field-meta.xml
<CustomField>
    <fullName>Floor_Shop_No__c</fullName>
    <label>Floor/Shop no</label>
    <length>30</length>
    <type>Text</type>
</CustomField>