force-app/main/default/objects/Onboard_Request__c/fields/Future_Expansion_Plans__c.field-meta.xml
<CustomField>
    <fullName>Future_Expansion_Plans__c</fullName>
    <label>Future Expansion Plans</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>