force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_API_Status__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_API_Status__c</fullName>
    <label>GDRFA API Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GDRFA_API_Status</valueSetName>
    </valueSet>
</CustomField>