force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_Application_Fee__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_Application_Fee__c</fullName>
    <label>GDRFA Application Fee</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>