force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_Fee_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_Fee_Breakdown__c</fullName>
    <label>GDRFA Fee Breakdown</label>
    <length>12255</length>
    <type>LongTextArea</type>
</CustomField>