force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_GetFee_Date__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_GetFee_Date__c</fullName>
    <label>GDRFA GetFee Date</label>
    <type>DateTime</type>
</CustomField>