force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_GetFee_FOUser__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_GetFee_FOUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GDRFA GetFee FOUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>