force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_Latest_Response__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_Latest_Response__c</fullName>
    <label>GDRFA Latest Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>