force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_Payment_Date__c</fullName>
    <label>GDRFA Payment Date</label>
    <type>DateTime</type>
</CustomField>