force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_Payment_FOUser__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_Payment_FOUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GDRFA Payment FOUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>