force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_Penalty__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_Penalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDRFA Penalty?</label>
    <type>Checkbox</type>
</CustomField>