force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_Reference_Number__c</fullName>
    <label>GDRFA Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>