force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_Return__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDRFA Return</label>
    <type>Checkbox</type>
</CustomField>