force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_Return_Reason__c</fullName>
    <label>GDRFA Return Reason</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>