force-app/main/default/objects/Onboard_Request__c/fields/GDRFA_Return_Time__c.field-meta.xml
<CustomField>
    <fullName>GDRFA_Return_Time__c</fullName>
    <label>GDRFA Return Time</label>
    <type>DateTime</type>
</CustomField>