force-app/main/default/objects/Onboard_Request__c/fields/Geographical_Target_Markets__c.field-meta.xml
<CustomField>
    <fullName>Geographical_Target_Markets__c</fullName>
    <label>Geographical Target Markets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>