force-app/main/default/objects/Onboard_Request__c/fields/Has_UBO__c.field-meta.xml
<CustomField>
    <fullName>Has_UBO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has UBO?</label>
    <type>Checkbox</type>
</CustomField>