force-app/main/default/objects/Onboard_Request__c/fields/Home_Navigate_URL__c.field-meta.xml
<CustomField>
    <fullName>Home_Navigate_URL__c</fullName>
    <formula>&apos;https://dubaisouth--uatrevamp.sandbox.my.site.com/DSPortal/&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Navigate URL</label>
    <type>Text</type>
</CustomField>