force-app/main/default/objects/Onboard_Request__c/fields/Initital_Fee_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Initital_Fee_Payment_Link__c</fullName>
    <label>Payment Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>