force-app/main/default/objects/Onboard_Request__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipName>Onboard_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>