force-app/main/default/objects/Onboard_Request__c/fields/Is_AML_Step_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_AML_Step_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSCS Is AML Step Created?</label>
    <type>Checkbox</type>
</CustomField>