force-app/main/default/objects/Onboard_Request__c/fields/Is_Invoice_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Invoice_Paid__c</fullName>
    <formula>if(TEXT(Invoice__r.Status__c) == &apos;Paid&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Invoice Paid?</label>
    <type>Checkbox</type>
</CustomField>