force-app/main/default/objects/Onboard_Request__c/fields/Is_liquidator__c.field-meta.xml
<CustomField>
    <fullName>Is_liquidator__c</fullName>
    <label>Do you want to appoint a liquidator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>