force-app/main/default/objects/Onboard_Request__c/fields/Is_Test_Record__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Record__c</fullName>
    <description>As freezone team suggested, so this is created for Noqodi.</description>
    <formula>OR(CASESAFEID($Organization.Id) != &apos;00D200000005fhiEAA&apos;,NOT(CONTAINS(&apos;International Trading&apos;,Account_Name__r.Name)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Test Record?</label>
    <type>Checkbox</type>
</CustomField>