force-app/main/default/objects/Onboard_Request__c/fields/Is_User_Required_Portal_Access__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Required_Portal_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will be true any applicant is required portal access</description>
    <label>Is User Required Portal Access?</label>
    <type>Checkbox</type>
</CustomField>