force-app/main/default/objects/Onboard_Request__c/fields/Is_Visa_s_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_Visa_s_Cancelled__c</fullName>
    <label>Is Visa&apos;s Cancelled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>