force-app/main/default/objects/Onboard_Request__c/fields/Last_Response_DCAA__c.field-meta.xml
<CustomField>
    <fullName>Last_Response_DCAA__c</fullName>
    <label>Last Response DCAA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>