force-app/main/default/objects/Onboard_Request__c/fields/Last_WebService_Executed_DCAA__c.field-meta.xml
<CustomField>
    <fullName>Last_WebService_Executed_DCAA__c</fullName>
    <label>Last WebService Executed DCAA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>