force-app/main/default/objects/Onboard_Request__c/fields/Lease_Duration_Other_Years__c.field-meta.xml
<CustomField>
    <fullName>Lease_Duration_Other_Years__c</fullName>
    <label>Lease Duration &quot;Other&quot; Years</label>
    <length>255</length>
    <type>Text</type>
</CustomField>