force-app/main/default/objects/Onboard_Request__c/fields/Lease_Selection__c.field-meta.xml
<CustomField>
    <fullName>Lease_Selection__c</fullName>
    <label>Lease Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>