force-app/main/default/objects/Onboard_Request__c/fields/Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form__c</fullName>
    <label>Legal Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DWC-LLC</fullName>
            </value>
            <value>
                <fullName>DWC-Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>