force-app/main/default/objects/Onboard_Request__c/fields/Legal_Type__c.field-meta.xml
<CustomField>
    <fullName>Legal_Type__c</fullName>
    <formula>TEXT(Account_Name__r.Legal_Form__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Type</label>
    <type>Text</type>
</CustomField>