force-app/main/default/objects/Onboard_Request__c/fields/Legal_Type_Arabic_Branch__c.field-meta.xml
<CustomField>
    <fullName>Legal_Type_Arabic_Branch__c</fullName>
    <formula>&quot;دي دبليو سي - فرع&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Type Arabic Branch</label>
    <type>Text</type>
</CustomField>