force-app/main/default/objects/Onboard_Request__c/fields/Legal_Type_Arabic_LLC__c.field-meta.xml
<CustomField>
    <fullName>Legal_Type_Arabic_LLC__c</fullName>
    <formula>&quot;دي دبليو سي - ش.ذ.م.م&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Type Arabic LLC</label>
    <type>Text</type>
</CustomField>