force-app/main/default/objects/Onboard_Request__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipName>Onboard_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>