force-app/main/default/objects/Onboard_Request__c/fields/License_Copy_DCAA_Response__c.field-meta.xml
<CustomField>
    <fullName>License_Copy_DCAA_Response__c</fullName>
    <label>License Copy DCAA Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>