force-app/main/default/objects/Onboard_Request__c/fields/License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Expiry_Date__c</fullName>
    <formula>IF(ISBLANK(Old_License_Expiry_Date__c),Account_Name__r.Current_License_Number__r.License_Expiry_Date__c,Old_License_Expiry_Date__c)</formula>
    <label>License Expiry Date</label>
    <type>Date</type>
</CustomField>