force-app/main/default/objects/Onboard_Request__c/fields/License_Issuance_Invoice__c.field-meta.xml
<CustomField>
    <fullName>License_Issuance_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>License Issuance Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipName>Second_Onboarding_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>