force-app/main/default/objects/Onboard_Request__c/fields/License_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Issue_Date__c</fullName>
    <formula>Account_Name__r.Current_License_Number__r.License_Issue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Issue Date</label>
    <type>Date</type>
</CustomField>