force-app/main/default/objects/Onboard_Request__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <formula>Account_Name__r.Current_License_Number__r.License_Number_Value__c</formula>
    <label>License Number</label>
    <type>Text</type>
</CustomField>