force-app/main/default/objects/Onboard_Request__c/fields/License_Renewal_for_years__c.field-meta.xml
<CustomField>
    <fullName>License_Renewal_for_years__c</fullName>
    <label>License Renewal for? (years)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>