force-app/main/default/objects/Onboard_Request__c/fields/Liquidator_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Liquidator_Company_Name__c</fullName>
    <label>Liquidator Company Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>