force-app/main/default/objects/Onboard_Request__c/fields/Liquidator_Name__c.field-meta.xml
<CustomField>
    <fullName>Liquidator_Name__c</fullName>
    <label>Liquidator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>