force-app/main/default/objects/Onboard_Request__c/fields/Loss__c.field-meta.xml
<CustomField>
    <fullName>Loss__c</fullName>
    <label>Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>