force-app/main/default/objects/Onboard_Request__c/fields/Maximum_Allowed_Directors__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Allowed_Directors__c</fullName>
    <label>Maximum Allowed Directors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>