force-app/main/default/objects/Onboard_Request__c/fields/MOA_Completed__c.field-meta.xml
<CustomField>
    <fullName>MOA_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MOA Completed?</label>
    <type>Checkbox</type>
</CustomField>