force-app/main/default/objects/Onboard_Request__c/fields/Name_Info__c.field-meta.xml
<CustomField>
    <fullName>Name_Info__c</fullName>
    <label>Name Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>