force-app/main/default/objects/Onboard_Request__c/fields/Name_Reservation_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Name_Reservation_Guidelines__c</fullName>
    <formula>&apos;&lt;a target=&quot;_blank&quot; href=&quot;https://dubaisouth--uatrevamp.sandbox.my.salesforce.com/sfc/p/3H0000000omI/a/KH000000PSbL/UzmK5kQYuiIcZZ408qWMFult_Xq0lJRTsyvYOv0KhbY&quot;&gt;&lt;span style=&quot;font-size:20px&quot;&gt; Name reservation guidelines check&lt;span&gt;&lt;/a&gt;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Reservation Guidelines</label>
    <type>Text</type>
</CustomField>