force-app/main/default/objects/Onboard_Request__c/fields/NameCheck__c.field-meta.xml
<CustomField>
    <fullName>NameCheck__c</fullName>
    <label>NameCheck</label>
    <length>255</length>
    <type>Text</type>
</CustomField>