force-app/main/default/objects/Onboard_Request__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nationality</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>