force-app/main/default/objects/Onboard_Request__c/fields/New_Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>New_Financial_Year__c</fullName>
    <label>New Financial Year</label>
    <type>Date</type>
</CustomField>