force-app/main/default/objects/Onboard_Request__c/fields/No_Active_Lease__c.field-meta.xml
<CustomField>
    <fullName>No_Active_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Active Lease</label>
    <type>Checkbox</type>
</CustomField>