force-app/main/default/objects/Onboard_Request__c/fields/Noqodi_Auth_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Noqodi_Auth_Request_Id__c</fullName>
    <label>Noqodi Auth Request Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>