force-app/main/default/objects/Onboard_Request__c/fields/Noqodi_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Noqodi_Order_ID__c</fullName>
    <label>Noqodi Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>