force-app/main/default/objects/Onboard_Request__c/fields/Noqodi_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Noqodi_Payment_Amount__c</fullName>
    <label>Noqodi Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>