force-app/main/default/objects/Onboard_Request__c/fields/Noqodi_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Noqodi_Payment_Type__c</fullName>
    <label>Noqodi Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>