force-app/main/default/objects/Onboard_Request__c/fields/Noqodi_Transaction_Reference__c.field-meta.xml
<CustomField>
    <fullName>Noqodi_Transaction_Reference__c</fullName>
    <description>This is the overall Noqodi Transaction Process Reference from which we can track the overall Noqodi Payment Cycle.</description>
    <label>Noqodi Transaction Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>