force-app/main/default/objects/Onboard_Request__c/fields/Noqodi_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>Noqodi_Transaction_Status__c</fullName>
    <description>This status indicates the Noqodi Transaction Status</description>
    <label>Noqodi Transaction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Noqodi_Transaction_Status</valueSetName>
    </valueSet>
</CustomField>