force-app/main/default/objects/Onboard_Request__c/fields/Notification_Mobile_UAE__c.field-meta.xml
<CustomField>
    <fullName>Notification_Mobile_UAE__c</fullName>
    <label>Notification Mobile UAE</label>
    <type>Phone</type>
</CustomField>