force-app/main/default/objects/Onboard_Request__c/fields/Number_Of_Visas_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Visas_Required__c</fullName>
    <label>Number Of Visas Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-20</fullName>
            </value>
            <value>
                <fullName>20-40</fullName>
            </value>
            <value>
                <fullName>40-50</fullName>
            </value>
            <value>
                <fullName>Above 50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>