force-app/main/default/objects/Onboard_Request__c/fields/Obtaining_a_lease_from_Other_than_DS__c.field-meta.xml
<CustomField>
    <fullName>Obtaining_a_lease_from_Other_than_DS__c</fullName>
    <label>Obtaining a lease from other than DS?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>