force-app/main/default/objects/Onboard_Request__c/fields/Old_Establishment_Card_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Establishment_Card_Expiry_Date__c</fullName>
    <label>Old Establishment Card Expiry Date</label>
    <type>Date</type>
</CustomField>