force-app/main/default/objects/Onboard_Request__c/fields/Old_License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_License_Expiry_Date__c</fullName>
    <label>Old License Expiry Date</label>
    <type>Date</type>
</CustomField>