force-app/main/default/objects/Onboard_Request__c/fields/Original_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Original_Company_Name__c</fullName>
    <label>Original Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>