force-app/main/default/objects/Onboard_Request__c/fields/Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Description__c</fullName>
    <label>Other Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>