force-app/main/default/objects/Onboard_Request__c/fields/Owner_Passport_Copy_DCAA_Response__c.field-meta.xml
<CustomField>
    <fullName>Owner_Passport_Copy_DCAA_Response__c</fullName>
    <label>Owner Passport Copy (DCAA Response)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>