force-app/main/default/objects/Onboard_Request__c/fields/P_O_Box__c.field-meta.xml
<CustomField>
    <fullName>P_O_Box__c</fullName>
    <label>P.O. Box</label>
    <length>100</length>
    <type>Text</type>
</CustomField>