force-app/main/default/objects/Onboard_Request__c/fields/Parent_Address__c.field-meta.xml
<CustomField>
    <fullName>Parent_Address__c</fullName>
    <label>Parent Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>