force-app/main/default/objects/Onboard_Request__c/fields/Parent_City__c.field-meta.xml
<CustomField>
    <fullName>Parent_City__c</fullName>
    <label>Parent City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>