force-app/main/default/objects/Onboard_Request__c/fields/Parent_Company_Commercial_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Commercial_Name__c</fullName>
    <formula>Account_Name__r.Parent_Company_Commercial_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Company Commercial Name</label>
    <type>Text</type>
</CustomField>