force-app/main/default/objects/Onboard_Request__c/fields/Parent_Company_Country__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Country__c</fullName>
    <formula>Account_Name__r.Company_Domicile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Company Country</label>
    <type>Text</type>
</CustomField>