force-app/main/default/objects/Onboard_Request__c/fields/Parent_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Name__c</fullName>
    <description>This is to capture the Parent Company Name, if business entity is &quot;DWC - Branch&quot;</description>
    <label>Parent Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>