force-app/main/default/objects/Onboard_Request__c/fields/Parent_Company_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Name_Arabic__c</fullName>
    <label>Parent Company Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>